efishiery/logs/efishiery_nomor_satu/create_table/2022-09-04T00:00:00+00:00/6.log
[2022-09-05 11:15:24,977] {taskinstance.py:851} INFO - Dependencies all met for <TaskInstance: efishiery_nomor_satu.create_table 2022-09-04T00:00:00+00:00 [queued]>
[2022-09-05 11:15:25,051] {taskinstance.py:851} INFO - Dependencies all met for <TaskInstance: efishiery_nomor_satu.create_table 2022-09-04T00:00:00+00:00 [queued]>
[2022-09-05 11:15:25,051] {taskinstance.py:1042} INFO - 
--------------------------------------------------------------------------------
[2022-09-05 11:15:25,052] {taskinstance.py:1043} INFO - Starting attempt 6 of 7
[2022-09-05 11:15:25,053] {taskinstance.py:1044} INFO - 
--------------------------------------------------------------------------------
[2022-09-05 11:15:25,192] {taskinstance.py:1063} INFO - Executing <Task(PythonOperator): create_table> on 2022-09-04T00:00:00+00:00
[2022-09-05 11:15:25,199] {standard_task_runner.py:52} INFO - Started process 10123 to run task
[2022-09-05 11:15:25,208] {standard_task_runner.py:76} INFO - Running: ['airflow', 'tasks', 'run', 'efishiery_nomor_satu', 'create_table', '2022-09-04T00:00:00+00:00', '--job-id', '158', '--pool', 'default_pool', '--raw', '--subdir', 'DAGS_FOLDER/soal_nomor_satu.py', '--cfg-path', '/tmp/tmp63bp_fov', '--error-file', '/tmp/tmp5pnar2iy']
[2022-09-05 11:15:25,213] {standard_task_runner.py:77} INFO - Job 158: Subtask create_table
[2022-09-05 11:15:25,346] {logging_mixin.py:104} INFO - Running <TaskInstance: efishiery_nomor_satu.create_table 2022-09-04T00:00:00+00:00 [running]> on host 2b8e628fc16c
[2022-09-05 11:15:25,427] {taskinstance.py:1257} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=farah
AIRFLOW_CTX_DAG_ID=efishiery_nomor_satu
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2022-09-04T00:00:00+00:00
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2022-09-04T00:00:00+00:00
[2022-09-05 11:15:25,445] {base.py:74} INFO - Using connection to: id: efishery. Host: 172.17.0.1, Port: 5432, Schema: efishery, Login: airflow, Password: XXXXXXXX, extra: None
[2022-09-05 11:15:25,474] {base.py:74} INFO - Using connection to: id: efishery_dwh. Host: 172.17.0.1, Port: 5432, Schema: efishery_dwh, Login: airflow, Password: XXXXXXXX, extra: None
[2022-09-05 11:15:25,503] {base.py:74} INFO - Using connection to: id: efishery_dwh. Host: 172.17.0.1, Port: 5432, Schema: efishery_dwh, Login: airflow, Password: XXXXXXXX, extra: None
[2022-09-05 11:15:25,514] {taskinstance.py:1455} ERROR - syntax error at or near "("
LINE 2:             INSERT INTO ("dim_customer")"
                                ^
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1112, in _run_raw_task
    self._prepare_and_execute_task_with_callbacks(context, task)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1285, in _prepare_and_execute_task_with_callbacks
    result = self._execute_task(context, task_copy)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1315, in _execute_task
    result = task_copy.execute(context=context)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/operators/python.py", line 117, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/operators/python.py", line 128, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/usecase/soal_nomor_satu.py", line 9, in main
    insert_dwh_table(df)
  File "/opt/airflow/dags/usecase/soal_nomor_satu.py", line 54, in insert_dwh_table
    cursor.execute(sql, tuple(row))
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 2:             INSERT INTO ("dim_customer")"
                                ^

[2022-09-05 11:15:25,524] {taskinstance.py:1503} INFO - Marking task as UP_FOR_RETRY. dag_id=efishiery_nomor_satu, task_id=create_table, execution_date=20220904T000000, start_date=20220905T111524, end_date=20220905T111525
[2022-09-05 11:15:25,618] {local_task_job.py:146} INFO - Task exited with return code 1
[2022-09-05 11:35:16,445] {taskinstance.py:851} INFO - Dependencies all met for <TaskInstance: efishiery_nomor_satu.create_table 2022-09-04T00:00:00+00:00 [queued]>
[2022-09-05 11:35:16,514] {taskinstance.py:851} INFO - Dependencies all met for <TaskInstance: efishiery_nomor_satu.create_table 2022-09-04T00:00:00+00:00 [queued]>
[2022-09-05 11:35:16,514] {taskinstance.py:1042} INFO - 
--------------------------------------------------------------------------------
[2022-09-05 11:35:16,515] {taskinstance.py:1043} INFO - Starting attempt 6 of 7
[2022-09-05 11:35:16,515] {taskinstance.py:1044} INFO - 
--------------------------------------------------------------------------------
[2022-09-05 11:35:16,554] {taskinstance.py:1063} INFO - Executing <Task(PythonOperator): create_table> on 2022-09-04T00:00:00+00:00
[2022-09-05 11:35:16,560] {standard_task_runner.py:52} INFO - Started process 10720 to run task
[2022-09-05 11:35:16,565] {standard_task_runner.py:76} INFO - Running: ['airflow', 'tasks', 'run', 'efishiery_nomor_satu', 'create_table', '2022-09-04T00:00:00+00:00', '--job-id', '166', '--pool', 'default_pool', '--raw', '--subdir', 'DAGS_FOLDER/soal_nomor_satu.py', '--cfg-path', '/tmp/tmpnxp3txrx', '--error-file', '/tmp/tmpufqqi8vp']
[2022-09-05 11:35:16,569] {standard_task_runner.py:77} INFO - Job 166: Subtask create_table
[2022-09-05 11:35:16,668] {logging_mixin.py:104} INFO - Running <TaskInstance: efishiery_nomor_satu.create_table 2022-09-04T00:00:00+00:00 [running]> on host 2b8e628fc16c
[2022-09-05 11:35:16,736] {taskinstance.py:1257} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=farah
AIRFLOW_CTX_DAG_ID=efishiery_nomor_satu
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2022-09-04T00:00:00+00:00
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2022-09-04T00:00:00+00:00
[2022-09-05 11:35:16,752] {base.py:74} INFO - Using connection to: id: efishery. Host: 172.17.0.1, Port: 5432, Schema: efishery, Login: airflow, Password: XXXXXXXX, extra: None
[2022-09-05 11:35:16,783] {base.py:74} INFO - Using connection to: id: efishery_dwh. Host: 172.17.0.1, Port: 5432, Schema: efishery_dwh, Login: airflow, Password: XXXXXXXX, extra: None
[2022-09-05 11:35:16,809] {base.py:74} INFO - Using connection to: id: efishery_dwh. Host: 172.17.0.1, Port: 5432, Schema: efishery_dwh, Login: airflow, Password: XXXXXXXX, extra: None
[2022-09-05 11:35:16,819] {taskinstance.py:1455} ERROR - name 'connection' is not defined
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1112, in _run_raw_task
    self._prepare_and_execute_task_with_callbacks(context, task)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1285, in _prepare_and_execute_task_with_callbacks
    result = self._execute_task(context, task_copy)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1315, in _execute_task
    result = task_copy.execute(context=context)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/operators/python.py", line 117, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/operators/python.py", line 128, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/usecase/soal_nomor_satu.py", line 9, in main
    insert_dwh_table(df)
  File "/opt/airflow/dags/usecase/soal_nomor_satu.py", line 54, in insert_dwh_table
    return connection.commit()
NameError: name 'connection' is not defined
[2022-09-05 11:35:16,828] {taskinstance.py:1503} INFO - Marking task as UP_FOR_RETRY. dag_id=efishiery_nomor_satu, task_id=create_table, execution_date=20220904T000000, start_date=20220905T113516, end_date=20220905T113516
[2022-09-05 11:35:16,898] {local_task_job.py:146} INFO - Task exited with return code 1
